--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@ body{
 	
 	width: 100%;
 	height: 100vh;
-	background-repeat: no-repeat;
-	background-size: 600px;
-	
-	
 }
 .container{
 	padding: 10px 10%;
@@ -335,12 +331,12 @@ nav .fa-solid{
 	font-size: 25px;
 }
 	.mini-task{
-		flex-basis: 30%;
+		flex-basis: 60%;
 	}
 	mini-task img{
 		flex-basis: 40%;
-		height: auto;
-		width:auto;
+		height: 100px;
+		width: 100px;
 	}
 
 	nav .fa-solid{
