--- a/style.css
+++ b/style.css
@@ -316,7 +316,11 @@ nav .fa-solid{
 }
 
 @media only screen and (max-width:600px){
+	body{
+		background: #fff;
+	}
 	#header{
+		background: #fff;
 	}
 	
 	.header-text{
