--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ nav .fa-solid{
 		top: 0;
 		right: -200px;
 		width: 200px;
-		 height: 100vh;
+		 height: 100%;
 		 transition:right 0.5s;
 		 padding-top: 50px;
 		 z-index: 2;
