--- a/style.css
+++ b/style.css
@@ -351,12 +351,12 @@ nav .fa-solid{
 		padding-left: 20px;
 	}
 	nav ul{
-		background: #1b2940;
+		background: smokwhite;
 		position: fixed;
 		top: 0;
 		right: -200px;
 		width: 200px;
-		 height: 100%;
+		 height: 100vh;
 		 transition:right 0.5s;
 		 padding-top: 50px;
 		 z-index: 2;
@@ -404,6 +404,7 @@ nav .fa-solid{
 	}
 	.copyright{
 		font-size: 14px;
+		width: 100vh;
 	}
 }
 #msg{
