--- a/style.css
+++ b/style.css
@@ -337,10 +337,11 @@ nav .fa-solid{
 	.mini-task{
 		flex-basis: 60%;
 	}
-	mini-task img{
+	.task img{
 		flex-basis: 40%;
 		height: 100px;
-		width: 100px;
+		width: 200px;
+		flex-basis: 30%;
 	}
 
 	nav .fa-solid{
