--- a/style.css
+++ b/style.css
@@ -336,12 +336,13 @@ nav .fa-solid{
 }
 	.mini-task{
 		flex-basis: 60%;
+		padding-left: 20px;
 	}
 	.task img{
 		flex-basis: 40%;
 		height: 100px;
 		width: 200px;
-		flex-basis: 30%;
+		flex-basis: 40%;
 	}
 
 	nav .fa-solid{
@@ -352,7 +353,7 @@ nav .fa-solid{
 		padding-left: 20px;
 	}
 	nav ul{
-		background: smokwhite;
+		background: navyblue;
 		position: fixed;
 		top: 0;
 		right: -200px;
@@ -405,6 +406,7 @@ nav .fa-solid{
 	}
 	.copyright{
 		font-size: 14px;
+		width: 100%;
 		
 	}
 #msg{
