--- a/style.css
+++ b/style.css
@@ -320,9 +320,6 @@ nav .fa-solid{
 	body{
 		background: #fff;
 	}
-	#header{
-		background: #fff;
-	}
 	
 	.header-text{
 		margin-top: 35%;
@@ -341,7 +338,7 @@ nav .fa-solid{
 	}
 	.task img{
 		flex-basis: 40%;
-		height: 100px;
+		height: 100vh;
 		width: 200px;
 		flex-basis: 40%;
 	}
