--- a/style.css
+++ b/style.css
@@ -317,9 +317,6 @@ nav .fa-solid{
 }
 
 @media only screen and (max-width:600px){
-	body{
-		background: #fff;
-	}
 	
 	.header-text{
 		margin-top: 35%;
@@ -338,9 +335,9 @@ nav .fa-solid{
 	}
 	.task img{
 		flex-basis: 40%;
-		height: 100vh;
+		height: 300px;
 		width: 200px;
-		flex-basis: 40%;
+		padding-top: 20px;
 	}
 
 	nav .fa-solid{
