--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav ul li a:hover::after{
 }
 .task{
 	display: flex;
-	justify-content: right;
+	justify-content: center;
 	color:#C7D4E4;
 }
 .mini-task{
@@ -331,15 +331,18 @@ nav .fa-solid{
 }
 	.mini-task{
 		flex-basis: 60%;
-		padding-left: 20px;
+		padding-right: 10px;
 	}
 	.task img{
 		flex-basis: 40%;
 		height: 300px;
 		width: 100px;
 		padding-top: 20px;
+		border-radius: 10px;
 	}
-
+        .task{
+		justify-content:right;
+	}
 	nav .fa-solid{
 		display: block;
 		font-size: 25px;
