--- a/style.css
+++ b/style.css
@@ -331,8 +331,16 @@ nav .fa-solid{
 }
 	.mini-task{
 		flex-basis: 60%;
-		padding-right: 10px;
+		padding-left: 10px;
 	}
+	.header-text,.sudo{
+		font-size: 20px;
+		font-weight: 100;
+	}
+	.mini-task p{
+		font-size:12px;
+	}
+	
 	.task img{
 		flex-basis: 40%;
 		height: 300px;
