--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ nav .fa-solid{
 	.mini-task{
 		flex-basis: 60%;
 		padding-left: 10px;
+		padding-top: 30px;
 	}
 	.header-text,.sudo{
 		font-size: 20px;
@@ -400,7 +401,7 @@ nav .fa-solid{
 		margin-right: 5px;
 
 	}
-	.robo{
+	.robo i{
 		margin: 0 5px;
 		padding-right:5px;
 	}
