--- a/style.css
+++ b/style.css
@@ -396,11 +396,19 @@ nav .fa-solid{
 
 	}
 /*------------------------------Skills---------------*/	
-	.robo i{
-		margin: 0 5px;
+	.robo li{
+		padding: 10px 0;
+		font-size: 15px;
+		margin-right: 2px;
+
 	}
-	
-	
+	.robo{
+		margin: 0 5px;
+		padding-right:2px;
+	}
+	.robo i{
+		font-size: 20px;
+	}
 
 	.tab-links{
 		font-size: 16px;
