--- a/style.css
+++ b/style.css
@@ -421,8 +421,17 @@ nav .fa-solid{
 	}
 	.copyright{
 		font-size: 14px;
-		
 	}
+	.social-icon a{
+		padding-right: 20px;
+	}
+	.contact-left p i{
+	margin-right: 5px;
+	font-size: 20px;
+       }
+       .contact-left p{
+	font-size: 12px;
+        }
         #msg{
 	color: whitesmoke;
 	margin-top: -2px;
