--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ nav .fa-solid{
 	.mini-task{
 		flex-basis: 60%;
 		padding-left: 10px;
-		padding-top: 30px;
+		padding-top: 100px;
 	}
 	.header-text,.sudo{
 		font-size: 20px;
@@ -346,7 +346,7 @@ nav .fa-solid{
 		flex-basis: 40%;
 		height: 300px;
 		width: 100px;
-		padding-top: 20px;
+		padding-top: 100px;
 		border-radius: 10px;
 	}
         .task{
@@ -360,7 +360,7 @@ nav .fa-solid{
 		padding-left: 20px;
 	}
 	nav ul{
-		background: blue;
+		background:#98C2DB;
 		position: fixed;
 		top: 0;
 		right: -200px;
