--- a/style.css
+++ b/style.css
@@ -398,8 +398,9 @@ nav .fa-solid{
 /*------------------------------Skills---------------*/	
 	.robo li{
 		padding: 10px 0;
-		font-size: 20px;
+		font-size: 30px;
 		margin:10 10px;
+		font-weight: 100;
 
 	}
 	.robo{
