--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ nav .fa-solid{
 		width: 200px;
 		padding-top: 10px;
 		border-radius: 50px;
+		padding-left: 100px;
 	}
         .task{
 	        display: flex;
