--- a/style.css
+++ b/style.css
@@ -343,8 +343,8 @@ nav .fa-solid{
 	}
 	
 	.task img{
-		flex-basis: 40%;
-		height: 500px;
+		flex-basis: 50%;
+		height: 100vh;
 		width: 400px;
 		padding-top: 50px;
 		border-radius: 50px;
