--- a/style.css
+++ b/style.css
@@ -346,10 +346,10 @@ nav .fa-solid{
 		flex-basis: 50%;
 		height: 800px;
 		width: 200px;
-		border-radius: 50px;
-		margin-top: 20px;
-		margin-left: 50px;
-		
+		border-radius: 70px;
+		margin-top: 40px;
+		margin-left: 70px;
+		margin-bottom: -5px;
 	}
         .task{
 	        display: flex;
