--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ nav{
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
+	position: relative;
 }
 .logo{
 	width: 120px;
@@ -84,6 +85,7 @@ nav ul li a:hover::after{
 .task img{
 	height: 60vh;
 	border-radius: 45px;
+	box-shadow: 0px 0px 12px grey;
 }
 /*---------------------About------------------------*/
 #About{
@@ -350,6 +352,7 @@ nav .fa-solid{
 		margin-top: 40px;
 		margin-left: 70px;
 		margin-bottom: -5px;
+		box-shadow: 0px 0px 12px grey;
 	}
         .task{
 	        display: flex;
