--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ nav{
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 .logo{
 	width: 120px;
