--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ nav{
 	flex-wrap: wrap;
 	position: fixed;
 	top: 0;
-	width: 100%;
-	background-color: #C7D4E4; 
+	background-color: #E5E7E9; 
 }
 .logo{
 	width: 120px;
