--- a/style.css
+++ b/style.css
@@ -23,10 +23,6 @@ nav{
 	align-items: center;
 	flex-wrap: wrap;
 	background-color: #E5E7E9;
-	position: fixed;
-	overflow: hidden;
-	top: -50px;
-	transistion: 0.3s;
 }
 .logo{
 	width: 120px;
@@ -70,7 +66,7 @@ nav ul li a:hover::after{
 
 }
 .sudo {
-	color: #A7A9CE;
+	color: #1893af;
 	font-family: "Times New Roman", serif;
 	font-style: italic;
 	font-weight: 200;
